force-app/main/default/src/objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt/HealthCloudGA__RiskScoreMedicaidInteractions__mdt.object-meta.xml
<CustomObject>
    <label>Risk Score Medicaid Interactions</label>
    <pluralLabel>Risk Score Medicaid Interactions</pluralLabel>
</CustomObject>