force-app/main/default/src/objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt/fields/HealthCloudGA__CommunityPBDualDisabled__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CommunityPBDualDisabled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Community PBDual Disabled</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>