force-app/main/default/src/objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt/fields/HealthCloudGA__Gender__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
                <default>true</default>
                <label>Female</label>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>