force-app/main/default/src/objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt/fields/HealthCloudGA__IsActive__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this record should be used.</description>
    <inlineHelpText>Whether this record should be used.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>