force-app/main/default/src/objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt/fields/HealthCloudGA__Medicaid__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Medicaid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Medicaid</label>
    <type>Checkbox</type>
</CustomField>