force-app/main/default/src/objects/HealthCloudGA__RiskScoreMedicaidInteractions__mdt/fields/HealthCloudGA__OriginallyDisabled__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OriginallyDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Originally Disabled</label>
    <type>Checkbox</type>
</CustomField>